Fix Content Page clipping

--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,7 @@ body {
     width: 100%;
     padding: 20px 0;
     border-radius: 8px;
+    overflow: hidden;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     overflow: hidden;
     box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
@@ -97,7 +98,6 @@ body {
 .content-container {
     padding: 30px 0;
     position: relative;
-    overflow: hidden;
     box-sizing: border-box; /* Ensure padding and border are included in the element's total width and height */
 }
 
@@ -157,7 +157,6 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-4%, -55%);
-    width: 40%;
 }
 
 .content::after {
@@ -167,7 +166,8 @@ body {
 }
 
 /* Ensure images and content are responsive */
-img, .content-pic {
-    max-width: 100%;
+.content-pic {
+    width: 80%;
+    max-width: 200px;
     height: auto;
 }
